fix(thumbs) fixes z-index problem with logo

--- a/src/main.scss
+++ b/src/main.scss
@@ -297,35 +297,12 @@ body {
   }
 }
 
-// .thumbs-container {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   transform: scale(0.5);
-//   transform-origin: center center;
-//   transition: transform var(--e-out) 0.5s;
-
-//   .thumbs-displayed & {
-//     transform: scaleX(1);
-//   }
-// }
-
 .thumbs {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  // visibility: hidden;
-  // transform-origin: center center;
-  // transition: transform var(--e-out) 0.5s;
-
-  .thumbs-displayed & {
-    // transform: scale(0);
-    // visibility: visible;
-  }
 }
 
 .thumb {
